--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 
-@
+@import url("inspiration.css");
+@import url("diy.css");
+@import url("om.css");
