--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -17,8 +17,21 @@ header h1 {
     font-size: 30px;
     text-align: left;
 }
+header h2{
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
 
-nav ul li a {
+.menu ul{
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
 
     text-align: right;
 }
+.menu li {
+
+
+    padding: 5px;
+}
+.menu
