--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,37 +1,100 @@
-header{
+header {
     background-color: var(--base-color);
     font-size: 12px;
     color: black;
     height: 120px;
-    }
+}
 
-header h1 p { 
+header h1 p {
     font-family: 'Montserrat', sans-serif;
 
-    }
+}
+
 header p {
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
+    font-family: 'Montserrat', sans-serif;
 }
+
 header h1 {
     font-size: 30px;
     text-align: left;
-}
-header h2{
     font-family: 'Montserrat', sans-serif;
-    text-align: center;
 }
 
-.menu ul{
+header h2 {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-size: 20px;
+}
+
+body {
+    background-image: url("img/backgroundimages.jpg");
+    background-size: auto;
+    z-index: 50%;
+
+}
+
+.menu ul {
     display: flex;
     justify-content: flex-end;
     padding: 0;
+    text-decoration: none;
+    /* text-transform: uppercase; */
+    background-color: var(--base-color);
+    list-style: none;
+    text-decoration-line: none;
 
-    text-align: right;
 }
-.menu li {
 
+.menu-items {
 
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding-top: 8px;
+}
+
+.menu li a {
+
+    color: black;
     padding: 5px;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
 }
-.menu
+
+main section {
+    width: 300px;
+    background-color: var(--accent-color);
+    padding: 100px;
+    margin: 100px;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    place-content: center;
+
+    width: 80%;
+    height: fit-content;
+    padding: 1rem;
+    margin: auto;
+
+
+}
+
+form {
+
+    width: 300px;
+    background-color: var(--accent-color);
+    padding: 50px;
+    margin: 20px;
+
+}
+
+form div {
+    width: 300px;
+    margin: 20px;
+
+}
