--- a/assets/css/variabler.css
+++ b/assets/css/variabler.css
@@ -1,6 +1,6 @@
 :root{
-    --base-color: #226F54;
-    --accent-color: #1D3557;
+    --base-color: #5fba9a;
+    --accent-color: lightblue;
     --color-light: #f1ecec;
     
 
