--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -12,7 +12,7 @@ header h1 p {
 
 header p {
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -64,24 +64,35 @@ body {
 }
 
 main section {
-    width: 300px;
+    width: 400px;
     background-color: var(--accent-color);
     padding: 100px;
-    margin: 100px;
+    margin: 50px;
 }
 
 .container {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 0.5rem;
     place-content: center;
 
-    width: 80%;
+    width: 110%;
     height: fit-content;
     padding: 1rem;
     margin: auto;
+}
 
+.text {
+    display: grid;
+    background-color:var(--color-light);
+    grid-row: 3/span 2;
+    grid-column: 6/span 4;
 
+    font-size: 2.5 em;
+    
+    width: 300px;
+    padding: 80px;
+    margin: 20px
 }
 
 form {
@@ -90,6 +101,7 @@ form {
     background-color: var(--accent-color);
     padding: 50px;
     margin: 20px;
+    place-content: center;
 
 }
 
@@ -97,4 +109,7 @@ form div {
     width: 300px;
     margin: 20px;
 
+}
+form input{
+    font-size: 1rem;
 }
