--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -36,13 +36,6 @@ body {
 
 }
 
-.wrapper {
-    display: flex;
-    grid-template-columns: 2fr 1fr;
-
-    max-width: 600px;
-    gap: 10px;
-}
 
 .menu ul {
     display: flex;
@@ -80,32 +73,46 @@ main section {
 }
 
 .container {
-
-    display: grid;
-    
-    
-
-    grid-row: 1 /span 2;
-    grid-column: 1 /span 2;
-
-
-
-   
+ display: grid;
+ grid-template-columns: 60px 60px 1fr 1fr;  
+ grid-template-rows: auto;
 }
 
-.text {
-    display: grid;
+.text1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 4/4;
+    justify-self: center;
+    align-self: center;
     background-color:var(--color-light);
-
-    grid-row: span 2;
-    
-
+    font-family: 'Montserrat', sans-serif;
     font-size: 2.5 em;
     
     width: 300px;
-    padding: 80px;
-    margin: 20px 
+    height: 200px
 }
+
+.text2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 4/8;
+    justify-self: center;
+    align-self: center;
+    background-color:var(--color-light);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5 em;
+    
+    width: 300px;
+    height: 200px
+   
+    
+   
+    
+}
+
+
 
 form {
 
