--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -73,12 +73,49 @@ main section {
 }
 
 .container {
- display: grid;
- grid-template-columns: 60px 60px 1fr 1fr;  
- grid-template-rows: auto;
+   
+ display: flex;
+ flex-wrap: wrap;
+ gap: 1rem 2rem;
+ width: 60%;
+ height:fit-content;
+ padding: 1rem;
+ margin: auto;
+
+
+
 }
 
-.text1{
+.box {
+    width: 125px;
+    height: 125px;
+    
+  
+}
+.box-2{
+    background-color:var(--color-light) ;
+    width: 300px;
+    height:200px;
+    font: size 2.5rem; 
+    font-family: 'Montserrat', sans-serif;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    
+}
+.box-4{
+    background-color:var(--color-light) ;
+    width: 300px;
+    height:200px;
+    font: size 2.5rem; 
+    font-family: 'Montserrat', sans-serif;
+    justify-self: center;
+    align-items: center;
+    place-content: center;
+
+}
+
+/* .text1{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,10 +127,10 @@ main section {
     font-size: 2.5 em;
     
     width: 300px;
-    height: 200px
-}
+    height: 200px;
+} */
 
-.text2 {
+/* .text2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +147,7 @@ main section {
     
    
     
-}
+} */
 
 
 
