--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -73,24 +73,38 @@ main section {
 }
 
 .container {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
    
- display: flex;
+ /* display: flex;
  flex-wrap: wrap;
  gap: 1rem 2rem;
  width: 60%;
  height:fit-content;
  padding: 1rem;
- margin: auto;
+ margin: auto; */
 
 
 
 }
 
 .box {
-    width: 125px;
+    /* width: 125px;
     height: 125px;
-    
+     */
   
+}
+
+.box-1{
+
+    
+    justify-self: center;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+
 }
 .box-2{
     background-color:var(--color-light) ;
@@ -101,55 +115,30 @@ main section {
     justify-self: center;
     align-self: center;
     text-align: center;
+    margin-right: 30%;
     
+}
+
+.box-3{
+    justify-self: center;
+    margin-left: 30%;
 }
 .box-4{
     background-color:var(--color-light) ;
     width: 300px;
-    height:200px;
+    height:200px; 
     font: size 2.5rem; 
     font-family: 'Montserrat', sans-serif;
     justify-self: center;
     align-items: center;
     place-content: center;
+    margin-right: 30%;
+    margin-top: 5%;
 
 }
-
-/* .text1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-column: 4/4;
-    justify-self: center;
-    align-self: center;
-    background-color:var(--color-light);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.5 em;
+.container-i{
     
-    width: 300px;
-    height: 200px;
-} */
-
-/* .text2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-column: 4/8;
-    justify-self: center;
-    align-self: center;
-    background-color:var(--color-light);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.5 em;
-    
-    width: 300px;
-    height: 200px
-   
-    
-   
-    
-} */
-
-
+}
 
 form {
 
