--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -77,23 +77,10 @@ main section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-   
- /* display: flex;
- flex-wrap: wrap;
- gap: 1rem 2rem;
- width: 60%;
- height:fit-content;
- padding: 1rem;
- margin: auto; */
-
-
-
 }
 
 .box {
-    /* width: 125px;
-    height: 125px;
-     */
+
   
 }
 
@@ -137,9 +124,28 @@ main section {
 
 }
 .container-i{
-    
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
 }
 
+.box-i{
+    justify-self: center;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+.box-j{
+    background-color:var(--color-light) ;
+    width: 300px;
+    height: 300px;px;
+    font: size 2.5rem; 
+    font-family: 'Montserrat', sans-serif;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    margin-right: 30%;
+}
 form {
 
     width: 300px;
