--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -138,7 +138,7 @@ main section {
 .box-j{
     background-color:var(--color-light) ;
     width: 300px;
-    height: 300px;px;
+    height: 200px;
     font: size 2.5rem; 
     font-family: 'Montserrat', sans-serif;
     justify-self: center;
@@ -146,6 +146,48 @@ main section {
     text-align: center;
     margin-right: 30%;
 }
+.box-diy1{
+    justify-self: center;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+.box-diy2{
+    justify-self: center;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;    
+}
+.box-diy3{
+    background-color:var(--color-light) ;
+    width: 300px;
+    height: 200px;
+    font: size 2.5rem; 
+    font-family: 'Montserrat', sans-serif;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    margin-right: 30%;
+}
+.box-om1{
+    justify-self: center;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+.box-om2{
+    background-color:var(--color-light) ;
+    width: 300px;
+    height: 200px;
+    font: size 2.5rem; 
+    font-family: 'Montserrat', sans-serif;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    margin-right: 30%;
+
+}
+
 form {
 
     width: 300px;
