--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -42,7 +42,7 @@ body {
     justify-content: flex-end;
     padding: 0;
     text-decoration: none;
-    /* text-transform: uppercase; */
+     
     background-color: var(--base-color);
     list-style: none;
     text-decoration-line: none;
@@ -63,13 +63,26 @@ body {
     padding: 5px;
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
+    text-transform: lowercase; 
+    
+}
+a::first-letter{
+    font-size:  uppercase;
 }
 
 main section {
     width: 400px;
     background-color: var(--accent-color);
-    padding: 100px;
-    margin: 50px;
+    padding: 50px;
+    justify-self: center;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+main form{
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;
 }
 
 .container {
@@ -77,12 +90,12 @@ main section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
+
 }
 
 .box-1{
 
-    
-    justify-self: center;
+  justify-self: center;
     margin-left: 30%;
     margin-top: 10%;
     margin-bottom: 5%;
@@ -112,7 +125,7 @@ main section {
     font: size 2.5rem; 
     font-family: 'Montserrat', sans-serif;
     justify-self: center;
-    align-items: center;
+    align-self: center;
     place-content: center;
     margin-right: 30%;
     margin-top: 5%;
@@ -148,12 +161,6 @@ main section {
     margin-bottom: 5%;
 }
 .box-diy2{
-    justify-self: center;
-    margin-left: 30%;
-    margin-top: 10%;
-    margin-bottom: 5%;    
-}
-.box-diy3{
     background-color:var(--color-light) ;
     width: 300px;
     height: 200px;
@@ -162,8 +169,16 @@ main section {
     justify-self: center;
     align-self: center;
     text-align: center;
-    margin-right: 30%;
+    margin-right: 30%;   
+
 }
+.box-diy3{
+    justify-self: center;
+    margin-left: 30%;
+    margin-top: 10%;
+    margin-bottom: 5%;    
+}
+
 .box-om1{
     justify-self: center;
     margin-left: 30%;
