--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -52,7 +52,7 @@ body {
 .menu-items {
 
     text-decoration: none;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     display: block;
     padding-top: 8px;
 }
@@ -111,7 +111,10 @@ main form{
     align-self: center;
     text-align: center;
     margin-right: 30%;
-    
+       
+}
+main a{
+    text-decoration: none;
 }
 
 .box-3{
@@ -120,7 +123,7 @@ main form{
 }
 .box-4{
     background-color:var(--color-light) ;
-    width: 300px;
+    width:300px;
     height:200px; 
     font: size 2.5rem; 
     font-family: 'Montserrat', sans-serif;
