--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -66,8 +66,9 @@ body {
     text-transform: lowercase; 
     
 }
-a::first-letter{
+header a{
     font-size:  uppercase;
+    
 }
 
 main section {
