--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -3,6 +3,7 @@ header {
     font-size: 12px;
     color: black;
     height: 120px;
+    
 }
 
 header h1 p {
@@ -36,7 +37,6 @@ body {
 
 }
 
-
 .menu ul {
     display: flex;
     justify-content: flex-end;
@@ -68,7 +68,7 @@ body {
 }
 header a{
     font-size:  uppercase;
-    
+
 }
 
 main section {
@@ -220,4 +220,14 @@ form div {
 }
 form input{
     font-size: 1rem;
+}
+
+footer{
+    background-color: var(--base-color);
+    font-family: 'Montserrat', sans-serif;
+    
+}
+.footer1{
+text-align: center;
+font-size: 20px;
 }
