--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -228,6 +228,14 @@ footer{
     
 }
 .footer1{
-text-align: center;
+text-align: left;
 font-size: 20px;
+}
+
+.footer2{
+    text-align: center;
+    font-size: 20px;   
+    list-style: none;
+    color: black;
+    
 }
