--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -28,6 +28,12 @@ header h2 {
     text-align: center;
     font-size: 20px;
 }
+header h4 {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-size: 15px;
+
+}
 
 body {
      
