--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -97,7 +97,6 @@ main form{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-
 }
 
 .box-1{
@@ -227,6 +226,7 @@ form input{
     font-size: 1rem;
 }
 
+
 footer{
     background-color: var(--base-color);
     font-family: 'Montserrat', sans-serif;
@@ -238,20 +238,18 @@ footer1{
     text-align: left;
     font-size: 20px;   
     list-style: none; 
-    color: black; 
-
+    
 }
-
 
 .footer2{
     text-align: center;
     font-size: 20px;   
-    list-style: none;
+    /* list-style: none; */
     color: black;
     
 }
 .footer3{
     text-align: right;
-    list-style: none;
+    /* list-style: none; */
     font-size: 20px;
 }
