--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -72,8 +72,9 @@ body {
     text-transform: lowercase; 
     
 }
-header a{
-    font-size:  uppercase;
+ a::first-letter{
+    font-size: 150%;
+    
 
 }
 
@@ -91,7 +92,11 @@ main form{
     margin-top: 10%;
     margin-bottom: 5%;
 }
+main a{
+    text-decoration: none;
+}
 
+/* container class findes på siderne index, diy og om, box 1-4 er på index siden */
 .container {
 
     display: grid;
@@ -119,9 +124,7 @@ main form{
     margin-right: 30%;
        
 }
-main a{
-    text-decoration: none;
-}
+
 
 .box-3{
     justify-self: center;
@@ -140,11 +143,14 @@ main a{
     margin-top: 5%;
 
 }
+/* container-i hører til siden inspiration */
+
 .container-i{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
 }
+/* box-i står for inspiration, siden inspiration, j fordi det kommer efter i */
 
 .box-i{
     justify-self: center;
@@ -163,6 +169,9 @@ main a{
     text-align: center;
     margin-right: 30%;
 }
+
+/* box-diy står på siden diy */
+
 .box-diy1{
     justify-self: center;
     margin-left: 30%;
@@ -188,6 +197,8 @@ main a{
     margin-bottom: 5%;    
 }
 
+/* box-om står for siden Om, da boxene er placeret der */
+
 .box-om1{
     justify-self: center;
     margin-left: 30%;
@@ -207,6 +218,8 @@ main a{
 
 }
 
+
+
 form {
 
     width: 300px;
@@ -225,6 +238,8 @@ form div {
 form input{
     font-size: 1rem;
 }
+
+
 
 
 footer{
