--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -23,7 +23,7 @@ header h1 {
     font-family: 'Montserrat', sans-serif;
 }
 
-header h2 {
+header h2  {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     font-size: 20px;
@@ -74,6 +74,7 @@ body {
 }
  a::first-letter{
     font-size: 150%;
+    text-transform: capitalize;
     
 
 }
@@ -219,7 +220,6 @@ main a{
 }
 
 
-
 form {
 
     width: 300px;
@@ -249,22 +249,26 @@ footer{
     justify-content: flex-end;
     justify-content: space-evenly;   
 }
-footer1{
+
+footer ul{
+    list-style-type: none;
+}
+.footer1{
     text-align: left;
-    font-size: 20px;   
-    list-style: none; 
+    font-size: 20px;  
+    font-family: 'Montserrat', sans-serif; 
     
 }
 
 .footer2{
     text-align: center;
     font-size: 20px;   
-    /* list-style: none; */
+    list-style: none; 
     color: black;
     
 }
 .footer3{
     text-align: right;
-    /* list-style: none; */
+    list-style: none; 
     font-size: 20px;
 }
