--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -21,6 +21,11 @@ header h1 {
     font-size: 40px;
     text-align: left;
     font-family: 'Montserrat', sans-serif;
+    color: black;
+}
+header a{
+    text-decoration: none;
+    color: black;
 }
 
 header h2  {
